--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
     </head>
 
     <body>
+        
+        <div class="field">
+            <canvas id="canvas"></canvas>
+            <div id="tools">
+                <button type="button" class="button">Undo</button>
+                <button type="button" class="button">Clear</button>
 
+                <div class="colour-field" style="background:red;"></div>
+                <div class="colour-field" style="background:blue;"></div>
+                <div class="colour-field" style="background:green;"></div>
+                <div class="colour-field" style="background:yellow;"></div>
+
+                <input type="color" class="color-picker">
+                <input type="range" min="1" max="100" class="pen-range>"
+            </div>
+        </div>
     </body>
 
     <script src="main,js"></script>
