--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="colour-field" style="background:green;"></div>
                 <div class="colour-field" style="background:yellow;"></div>
 
-                <input type="color" class="color-picker">
+                <input type="colour" class="colour-picker">
                 <input type="range" min="1" max="100" class="pen-range>"
             </div>
         </div>
