Added the colour tools and styling

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div class="colour-field" style="background:green;"></div>
                 <div class="colour-field" style="background:yellow;"></div>
 
-                <input type="color" class="color-picker">
-                <input type="range" min="1" max="100" class="pen-range>"
+                <input type="color" class="colour-picker">
+                <input type="range" min="1" max="100" class="pen-range">
             </div>
         </div>
     </body>
