changed id to class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <div class="field">
             <canvas id="canvas"></canvas>
-            <div id="tools">
+            <div class="tools">
                 <button type="button" class="button">Undo</button>
                 <button type="button" class="button">Clear</button>
 
