--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <canvas id="canvas"></canvas>
             <div class="tools">
                 <button type="button" class="button">Undo</button>
-                <button type="button" class="button">Clear</button>
+                <button onClick="clear_canvas()" type="button" class="button">Clear</button>
 
                 <div onClick="change_color(this)" class="colour-field" style="background:red;"></div>
                 <div onClick="change_color(this)" class="colour-field" style="background:blue;"></div>
