--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="field">
             <canvas id="canvas"></canvas>
             <div class="tools">
-                <button type="button" class="button">Undo</button>
+                <button onClick="undo_last()" type="button" class="button">Undo</button>
                 <button onClick="clear_canvas()" type="button" class="button">Clear</button>
 
                 <div onClick="change_color(this)" class="colour-field" style="background:red;"></div>
